force-app/main/default/objects/WSM_Document_Template__c/WSM_Document_Template__c.object-meta.xml
<CustomObject>
    <label>WSM Document Template</label>
    <nameField>
        <label>WSM Document Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WSM Document Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>