force-app/main/default/objects/WSM_Document_Template__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to make this template visible in the Document Gen flow</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>