force-app/main/default/objects/WSM_Document_Template__c/fields/Body_Section_Padding__c.field-meta.xml
<CustomField>
    <fullName>Body_Section_Padding__c</fullName>
    <description>Can use px, %, or rem.
E.G 10px</description>
    <inlineHelpText>Can use px, %, or rem.
E.G 10px</inlineHelpText>
    <label>Body (Section) Padding</label>
    <length>10</length>
    <type>Text</type>
</CustomField>