force-app/main/default/objects/WSM_Document_Template__c/fields/Day_Of__c.field-meta.xml
<CustomField>
    <fullName>Day_Of__c</fullName>
    <label>Day Of</label>
    <type>Date</type>
</CustomField>