force-app/main/default/objects/WSM_Document_Template__c/fields/Footer_Height_px__c.field-meta.xml
<CustomField>
    <fullName>Footer_Height_px__c</fullName>
    <defaultValue>40</defaultValue>
    <description>This is manual height adjustment for the header. This must be in pixels. Default height is 40px.</description>
    <inlineHelpText>This is manual height adjustment for the header. This must be in pixels. Default height is 40px.</inlineHelpText>
    <label>Footer Height (px)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>