force-app/main/default/objects/WSM_Document_Template__c/fields/Header_Background_Color__c.field-meta.xml
<CustomField>
    <fullName>Header_Background_Color__c</fullName>
    <description>Hex code with #
E.G #123789</description>
    <inlineHelpText>Hex code with #
E.G #123789</inlineHelpText>
    <label>Header Background Color</label>
    <length>12</length>
    <type>Text</type>
</CustomField>