force-app/main/default/objects/WSM_Document_Template__c/fields/Header_Height_px__c.field-meta.xml
<CustomField>
    <fullName>Header_Height_px__c</fullName>
    <defaultValue>80</defaultValue>
    <description>This is manual height adjustment for the header. This must be in pixels. Default height is 80px.</description>
    <inlineHelpText>This is manual height adjustment for the header. This must be in pixels. Default height is 80px.</inlineHelpText>
    <label>Header Height (px)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>