force-app/main/default/objects/WSM_Document_Template__c/fields/Header_Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>Header_Logo_URL__c</fullName>
    <description>Note, this can also be a merge field to a URL somewhere in the main object record data.</description>
    <inlineHelpText>Note, this can also be a merge field to a URL somewhere in the main object record data.</inlineHelpText>
    <label>Header Logo URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>