force-app/main/default/objects/WSM_Document_Template__c/fields/Header_Padding_Sides_px__c.field-meta.xml
<CustomField>
    <fullName>Header_Padding_Sides_px__c</fullName>
    <description>Header content padding horizontal in pixels</description>
    <inlineHelpText>Header content padding horizontal in pixels</inlineHelpText>
    <label>Header Padding Sides (px)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>