force-app/main/default/objects/WSM_Document_Template__c/fields/Object_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Object_Prefix__c</fullName>
    <description>This is the object prefix generated by backend automation. This will only populate for valid sObject API Names.</description>
    <inlineHelpText>This is the object prefix generated by backend automation. This will only populate for valid sObject API Names.</inlineHelpText>
    <label>Object Prefix</label>
    <length>18</length>
    <type>Text</type>
</CustomField>