force-app/main/default/objects/WSM_Document_Template__c/fields/Page_Body_Background_Color__c.field-meta.xml
<CustomField>
    <fullName>Page_Body_Background_Color__c</fullName>
    <label>Page Body Background Color</label>
    <length>12</length>
    <type>Text</type>
</CustomField>