force-app/main/default/objects/WSM_Document_Template__c/fields/Page_Footer__c.field-meta.xml
<CustomField>
    <fullName>Page_Footer__c</fullName>
    <label>Page Footer</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>