force-app/main/default/objects/WSM_Document_Template__c/fields/Page_Header__c.field-meta.xml
<CustomField>
    <fullName>Page_Header__c</fullName>
    <label>Page Header</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>