force-app/main/default/objects/WSM_Document_Template__c/fields/PDF_Content_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>PDF_Content_Document_Id__c</fullName>
    <description>The Content Document Id used to store the PDF used in this document Template.</description>
    <inlineHelpText>The Content Document Id used to store the PDF used in this document Template.</inlineHelpText>
    <label>PDF Content Document Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>