force-app/main/default/objects/WSM_Document_Template__c/fields/PDF_Field_Definitions_JSON__c.field-meta.xml
<CustomField>
    <fullName>PDF_Field_Definitions_JSON__c</fullName>
    <label>PDF Field Definitions JSON</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>