force-app/main/default/objects/WSM_Document_Template__c/fields/Template_Render_Type__c.field-meta.xml
<CustomField>
    <fullName>Template_Render_Type__c</fullName>
    <label>Template Render Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WSM Declarative Generation Templates</fullName>
            </value>
            <value>
                <fullName>PDF Field Filler</fullName>
            </value>
            <value>
                <fullName>Word Document Replacement Tool</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>